--- a/Trabajo/cliente_jardininfantil/web/index.html
+++ b/Trabajo/cliente_jardininfantil/web/index.html
@@ -23,13 +23,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="cliente_jardininfatil">
+  <meta name="apple-mobile-web-app-title" content="cliente_jardininfantil">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>cliente_jardininfatil</title>
+  <title>cliente_jardininfantil</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
